--- a/theme_stylesheets/203923237/1672510835/theme.css
+++ b/theme_stylesheets/203923237/1672510835/theme.css
@@ -36,7 +36,7 @@ body#home {
   padding-top: 0;
 }
 body.standalone {
-  padding: 70px;
+ f padding: 70px;
   text-align: center;
 }
 body.standalone h1 {
@@ -948,7 +948,8 @@ section.content.page-home.home-empty {
     padding-right: 0;
   }
 }
-section.content h1 {
+section.
+content h1 {
   text-align: center;
 }
 
